--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>PerceptualReader(p5js)</title>
+<title>PerceptualReader</title>
 <meta charset="utf-8">
-<script src="p5.min.js"></script>
+<script src="node_modules/p5/lib/p5.min.js"></script>
 <script src="code.js"></script>
 </script>
 <style>
