--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <title>PerceptualReader</title>
 <meta charset="utf-8">
-<script src="node_modules/p5/lib/p5.min.js"></script>
+<script src="p5.min.js"></script>
 <script src="code.js"></script>
 </script>
 <style>
