--- a/index.html
+++ b/index.html
@@ -8,12 +8,26 @@
 </script>
 <style>
 canvas{
+	position: absolute;
+	display: inline-block;
 	border-style:solid;
-	border-width:1px;
+	border-width:2px;
+	border-color:rgb(40,40,40);
+	border-radius: 15px;
+	top:10px;
+}
+#instructions {
+	font-family:    Courier, Arial, Helvetica, sans-serif;
+	font-size:      11px;
+	position: absolute;
+  top: 420px;
+	left: 20px;
 }
 </style>
 </head>
 <body>
-    
+<div id="instructions">
+Drag mouse or use left/right arrows to control direction and speed, double-click to toggle borders
+</div>
 </body>
 </html>
