borders, instructions, refactors

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ canvas{
 	display: inline-block;
 	border-style:solid;
 	border-width:2px;
-	border-color:rgb(40,40,40);
+	border-color:rgb(30,30,30);
 	border-radius: 15px;
 	top:10px;
 }
@@ -27,7 +27,7 @@ canvas{
 </head>
 <body>
 <div id="instructions">
-Drag mouse or use left/right arrows to control direction and speed, double-click to toggle borders
+Drag mouse or use left/right arrows to control direction and speed, up/down arrows to toggle borders
 </div>
 </body>
 </html>
