auto-resize to page

--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@ canvas{
 	border-width:2px;
 	border-color:rgb(30,30,30);
 	border-radius: 15px;
-	top:10px;
+	top:15px;
+  left:15px;
 }
+
 #instructions {
 	font-family:    Courier, Arial, Helvetica, sans-serif;
 	font-size:      11px;
