--- a/index.html
+++ b/index.html
@@ -1,35 +1,38 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>PerceptualReader</title>
-<meta charset="utf-8">
-<script src="p5.min.js"></script>
-<script src="code.js"></script>
-</script>
-<style>
-canvas{
-	position: absolute;
-	display: inline-block;
-	border-style:solid;
-	border-width:2px;
-	border-color:rgb(30,30,30);
-	border-radius: 15px;
-	top:15px;
-  left:15px;
-}
 
-#instructions {
-	font-family:    Courier, Arial, Helvetica, sans-serif;
-	font-size:      11px;
-	position: absolute;
-  top: 420px;
-	left: 20px;
-}
-</style>
+<head>
+  <title>PerceptualReader</title>
+  <meta charset="utf-8">
+  <script src="p5.min.js"></script>
+  <script src="code.js"></script>
+  </script>
+  <style>
+    canvas {
+      position: absolute;
+      display: inline-block;
+      border-style: solid;
+      border-width: 2px;
+      border-color: rgb(30, 30, 30);
+      border-radius: 15px;
+      top: 15px;
+      left: 15px;
+    }
+
+    #instructions {
+      font-family: Courier, Arial, Helvetica, sans-serif;
+      font-size: 11px;
+      position: absolute;
+      bottom: 120px;
+      left: 20px;
+    }
+  </style>
 </head>
+
 <body>
-<div id="instructions">
-Drag mouse or use left/right arrows to control direction and speed, up/down arrows to toggle borders
-</div>
+  <div id="instructions">
+    Drag mouse or use left/right arrows to control direction and speed, up/down arrows to toggle borders
+  </div>
 </body>
+
 </html>
