hide instructions, replace Loading

--- a/hen-template/index.html
+++ b/hen-template/index.html
@@ -16,7 +16,7 @@
 
     <div id="content" class="rel"></div>
     <div id="instructions" class="rel">
-      Swipe, drag mouse or use left/right arrows to control direction/speed, up/down arrows to toggle borders
+     <!-- Swipe, drag mouse or use left/right arrows to control direction/speed, up/down arrows to toggle borders -->
     </div>
   </div>
 </body>
